test/langtools/tools/javac/SuperInit/EarlyLocalClass.out
EarlyLocalClass.java:12:37: compiler.err.cant.ref.before.ctor.called: hashCode()
- compiler.note.preview.filename: EarlyLocalClass.java, DEFAULT
- compiler.note.preview.recompile
1 error
